# Rust_photo_Editor

./: Cargo.toml  LICENSE  README.md  error.txt  workdonesofar.txt
benches/: filters_benchmark.rs  layer_benchmark.rs  raw_processing_benchmark.rs  selection_benchmark.rs  vector_benchmark.rs
src/: Cargo.toml  README.md  lib.rs  main.rs
src/core/: canvas.rs  document.rs  history.rs  layer.rs  layers.rs  mod.rs  point.rs  selection.rs  settings.rs
src/filters/: artistic.rs  blur.rs  color.rs  distort.rs  mod.rs  sharpen.rs
src/raw/: mod.rs
src/tools/: brush.rs  clone.rs  crop.rs  gradient.rs  heal.rs  mod.rs  paint.rs  selection.rs  text.rs  transform.rs  vector.rs  vector_tools.rs
src/ui/: canvas.rs  color_picker.rs  filters_panel.rs  history_panel.rs  layers_panel.rs  main_window.rs  menu.rs  menu_manager.rs  mod.rs  preferences.rs  settings.rs  tools_panel.rs
src/ui/css/: style.css
src/vector/: document.rs  mod.rs  path.rs  shape.rs  text.rs
