[package]
name = "rust_photo"
version = "0.1.0"
edition = "2021"
authors = ["Matt <matt@example.com>"]
description = "A powerful photo editing application in Rust"

[dependencies]
# Image processing
image = "0.24.7"
imageproc = "0.23.0"
kamadak-exif = "0.5.5"
rawloader = "0.37.1"

# UI framework
gtk4 = "0.7.3"
libadwaita = "0.5.3"
cairo-rs = "0.18.3"
pango = "0.18.0"

# Parallel processing
rayon = "1.8.0"
num_cpus = "1.16.0"

# Logging & debugging
log = "0.4.20"
env_logger = "0.10.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

# Serialization
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
ron = "0.8.1"

# Utility
uuid = { version = "1.6.1", features = ["v4"] }
chrono = "0.4.31"
directories = "5.0.1"
dirs = "5.0.1"
once_cell = "1.18.0"
anyhow = "1.0.75"
thiserror = "1.0.50"
rand = "0.8.5"

# Optional GPU acceleration
# Enabled with feature flags
vulkano = { version = "0.34.1", optional = true }
wgpu = { version = "0.17.1", optional = true }
ocl = { version = "0.19", optional = true }
cuda-runtime-sys = { version = "0.3.0-alpha.1", optional = true }

[features]
default = ["gpu-cuda"]
gpu-vulkan = ["dep:vulkano"]
gpu-wgpu = ["dep:wgpu"]
gpu-cuda = ["dep:ocl", "dep:cuda-runtime-sys"]

[profile.release]
opt-level = 3
lto = "thin"
debug = 1  # Include line number debug info

[profile.dev.package."*"]
opt-level = 2

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
tempfile = "3.8.1"
test-log = "0.2.13"

[[bench]]
name = "filters_benchmark"
harness = false

[[bench]]
name = "layer_benchmark"
harness = false

[[bench]]
name = "selection_benchmark"
harness = false

[[bench]]
name = "raw_processing_benchmark"
harness = false

[[bench]]
name = "vector_benchmark"
harness = false 